--- a/src/components/patient-allergy/patient-allergy.scss
+++ b/src/components/patient-allergy/patient-allergy.scss
@@ -1,5 +1,12 @@
 patient-allergy {
-    .button-add {
-        text-align: center;
+    .buttons {
+        position: absolute;
+	    bottom: 0;
+	    width: 100%;
+	    left: 0;
+	    button{
+	    	font-size: 1.4rem !important;
+	    	color: $accent;
+	    }
     }
 }
