--- a/src/components/patient-allergy/patient-allergy.html
+++ b/src/components/patient-allergy/patient-allergy.html
@@ -1,4 +1,3 @@
-<button ion-button block color="accent" (click)="addAllergy($event)"><ion-icon name="add" >Add Allergy</ion-icon></button>
 <div>
     <ion-list>
         <ion-item class="allergy" *ngFor="let allergy of allergies.value;let idx=index">
@@ -10,4 +9,7 @@
             </div>
         </ion-item>
     </ion-list>
+    <div text-right class="buttons">
+        <button ion-button clear (click)="addAllergy($event)"><ion-icon name="add" color="accent"></ion-icon>Add Allergy</button>
+    </div>
 </div>
