--- a/src/components/queue-widget/queue-widget.scss
+++ b/src/components/queue-widget/queue-widget.scss
@@ -40,31 +40,22 @@ queue-widget{
 				position: relative;
 				.description {
 					vertical-align: middle;
-					width: 60%;
-					display: table-cell;
-					padding-left: 16px;
+				    width: 70%;
+					display: inline;
 				}
 				.value {
-					vertical-align: middle;
-					text-align: center;
-					width: 30%;
-					display: table-cell;
-					font-size: 5vw;
-					// border-right: dashed 1px;
+					    vertical-align: middle;
+					    text-align: left;
+					    display: block;
+					    font-size: 6vw;
+					    padding-left: 16px;
 
 				}
 				.dot{
-					height: 15px;
-					width: 10%;
-					display: table-cell;
-					vertical-align: middle;
-					text-align: center;
-					// position: absolute;
-					// margin-left: -10px;
-					// margin-top: -10px;
-					// left: 33%;
-					// top: 50%;
-					// border-radius: 50%;
+				    height: 15px;
+				    display: inline;
+				    vertical-align: middle;
+				    text-align: center;
 				}
 			}
 		}
