--- a/src/components/consultation-segment/consultation-segment.html
+++ b/src/components/consultation-segment/consultation-segment.html
@@ -9,23 +9,17 @@
         </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-        <div [ngSwitch]="segment">
+        <div class="segment-container" [ngSwitch]="segment">
             <div *ngSwitchCase="'segment1'">
                 <patient-allergy></patient-allergy>
             </div>
 
             <div *ngSwitchCase="'segment2'">
-                <ion-list>
-                    <ion-item class="allergy">
-                    </ion-item>
-                </ion-list>
+                <patient-condition> </patient-condition>
             </div>
 
             <div *ngSwitchCase="'segment3'">
-                <ion-list>
-                    <ion-item class="allergy">
-                    </ion-item>
-                </ion-list>
+                <patient-medication></patient-medication>
             </div>
         </div>
     </ion-card-content>
