--- a/src/components/patient-condition/patient-condition.html
+++ b/src/components/patient-condition/patient-condition.html
@@ -1,4 +1,3 @@
-<button ion-button block color="accent" (click)="addCondition($event)"><ion-icon name="add" >Add Condition</ion-icon></button>
 <div>
     <ion-list>
         <ion-item class="condition" *ngFor="let condition of conditions.value;let idx=index">
@@ -10,4 +9,7 @@
             </div>
         </ion-item>
     </ion-list>
+    <div text-right class="buttons">
+        <button ion-button clear (click)="addCondition($event)"><ion-icon name="add" color="accent"></ion-icon>Add Condition</button>
+    </div>
 </div>
