--- a/src/components/patient-condition/patient-condition.scss
+++ b/src/components/patient-condition/patient-condition.scss
@@ -1,3 +1,15 @@
 patient-condition {
-
+    .buttons {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        left: 0;
+        button {
+            font-size: 1.4rem !important;
+            color: $accent;
+        }
+    }
+    >div {
+        margin-bottom: 10%;
+    }
 }
