--- a/src/components/patient-medication/patient-medication.html
+++ b/src/components/patient-medication/patient-medication.html
@@ -1,4 +1,3 @@
-<button ion-button block color="accent" (click)="addMedication($event)"><ion-icon name="add" >Add Medication</ion-icon></button>
 <div>
     <ion-list>
         <ion-item class="medication" *ngFor="let medication of medications.value;let idx=index">
@@ -10,4 +9,7 @@
             </div>
         </ion-item>
     </ion-list>
+    <div text-right class="buttons">
+        <button ion-button clear (click)="addMedication($event)"><ion-icon name="add" color="accent"></ion-icon>Add Medication</button>
+    </div>
 </div>
