add to queue from patient tab

--- a/src/components/reminder-widget/reminder-widget.html
+++ b/src/components/reminder-widget/reminder-widget.html
@@ -2,7 +2,7 @@
 	<ion-card-header>
 		<ion-label no-padding no-margin>
 		<ion-icon name = "list-box"></ion-icon>
-		Reminder
+		Message Board
 		</ion-label>
 	</ion-card-header>
 	<ion-card-content>
