--- a/src/components/patient-condition/patient-condition.scss
+++ b/src/components/patient-condition/patient-condition.scss
@@ -12,4 +12,27 @@ patient-condition {
     >div {
         margin-bottom: 10%;
     }
+    .condition-list {
+        min-height: 100px;
+        padding: 0px 5px;
+        overflow-y: auto;
+        height: 120px;
+        .condition {
+            font-size: 14px;
+            height: auto;
+            display: flex;
+            justify-content: space-between;
+            line-height: 25px;
+            margin: 14px 0;
+            h2 {
+                font-weight: bold;
+            }
+            ion-icon {
+                font-size: 24px;
+                margin-top: 5px;
+            }
+            border-bottom: 2px;
+            border-bottom-style: solid;
+        }
+    }
 }
