--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -2,7 +2,7 @@ login-page{
 	ion-content{
 	    background: url("../assets/img/bg.jpg");
 	    background-repeat: no-repeat;
-	    background-position: center;
+	    background-position: left;
 	    background-size: cover;
 		.scroll-content{
 		padding: 10%;
