--- a/src/components/reminder-widget/reminder-widget.html
+++ b/src/components/reminder-widget/reminder-widget.html
@@ -6,12 +6,15 @@
 		</ion-label>
 	</ion-card-header>
 	<ion-card-content>
-		<ion-list no-lines>
+		<div text-center padding>
+			<h1>Comming Soon</h1>
+		</div>
+		<!-- <ion-list no-lines>
 			<ion-item  ion-item *ngFor="let item of notificationList; let idx = index" (swipe)="remove(idx)">
 				<h3>{{item.body}}</h3>
 				<p text-right>{{item.time | date:"longDate"}}</p>
 			</ion-item>
-		</ion-list>
+		</ion-list> -->
 	</ion-card-content>
 	<div text-right>
 		<button ion-button clear small color="accent">+Add Reminder</button>
